--- a/src/components/sections/pricing_section/pricesecwide.css
+++ b/src/components/sections/pricing_section/pricesecwide.css
@@ -7,8 +7,8 @@
     z-index: 2;
     border-radius: 15px;
     display: grid;
-    box-sizing: border-box;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    box-sizing: border-box;
     box-shadow: var(--home-text-shadow);
     visibility: hidden;
     box-sizing: border-box;
@@ -38,8 +38,7 @@
     
  }
 
- .dynamicPricingSect > .durCont {
- }
+
 .dynamicPricingSect > .durCont > .duratonBtns {
     min-width: 200px;
     max-width: 30%;
@@ -62,7 +61,7 @@
 
  }
 
-.vidCon > video {
+.vidCon > img {
     height: 100%;
     max-height: 100%;
     max-width: 100%;
